--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Weather App</title>
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
     </head>
     <body>
         <div class="container">
@@ -17,6 +17,6 @@
             <div id="weatherResult"></div>
             <div id="errorContainer"></div>
         </div>
-        <script src="main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
